--- a/shop/src/app/globals.css
+++ b/shop/src/app/globals.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Stack+Sans+Text:wght@200..700&display=swap');
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -21,7 +19,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: 'Stack Sans Text', Arial, Helvetica, sans-serif;
+  font-family: var(--font-stack), Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
